--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Mengutia_MyFirstApp</string>
+    <string name="description">Anime Girl</string>
+    <string name="main_text">Hello TVL-ICT</string>
 </resources>
