--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Mengutia_MyFirstApp</string>
     <string name="description">Anime Girl</string>
     <string name="main_text">Hello TVL-ICT</string>
+    <string name="button">Click for Surprise!</string>
 </resources>
